# Voice-chat

./: .env  .env.example  .gitignore  DOCUMENTACION.txt  LICENSE  README.md  RESUMEN_VOICE_CHAT.txt  Teamspeak.txt  build.ps1  check_api.py  discord.txt  fix_api.py  fix_bug.py  fix_noise.py  fix_noise2.py  fix_settings.py  pr_body.md  railway.json  render.yaml  requirements.txt  test_jwt.py
backend/: __init__.py  auth.py  database.py  main.py  models.py  permissions.py  schemas.py  websocket.py
backend/routes/: __init__.py  auth.py  channels.py  dm.py  files.py  groups.py  livekit.py  users.py
backend/tests/: test_livekit_debug.py
docs/: index.html
electron/: README.md  package-lock.json  package.json
electron/src/: main.js  preload.js
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  livekit-temp.js  livekit.js  tauri-audio.js  webaudio-filter.js  websocket.js
local-server/: main.py  requirements.txt
src-tauri/: Cargo.toml  package-lock.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  logger.rs  main.rs
