[package]
name = "voicespace"
version = "1.0.0"
description = "VoiceSpace - Desktop Voice Chat Application"
authors = ["VoiceSpace Team"]
edition = "2021"

[lib]
name = "voicespace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing
cpal = "0.15"
ringbuf = "0.2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Logging
log = "0.4"
env_logger = "0.11"
